Fix tooltip overflow on small device sizes

--- a/css/style.css
+++ b/css/style.css
@@ -1116,6 +1116,8 @@ noscript {
 .tooltip {
     position: absolute;
     bottom: calc(100% + 10px);
+    left: 50%;
+    transform: translateX(-50%);
     opacity: 0;
     background: linear-gradient(to bottom right, var(--tech-stack-box-first-color), var(--tech-stack-box-second-color));
     border: 1px solid var(--tech-stack-box-border-color);
@@ -2059,6 +2061,12 @@ footer {
     .tech-stack-box {
         width: 100%;
         height: calc(76vw/2)
+    }
+
+    .tooltip {
+        white-space: normal;
+        text-align: center;
+        width: 90%
     }
 }
 
